<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- MainActivity -->
    <string name="app_name">2DV106 Lab2</string>
    <string name="action_settings">Settings</string>
    <string name="order_by_year">Year</string>
    <string name="order_by_name">Country</string>
    <string name="add_new_country">Add</string>
    <string name="textViewHeaderMain">All activities</string>

    <!-- MyCountries -->
    <string name="title_activity_my_countries">My Countries</string>
    <string name="buttonAddCountry">Add Country</string>
    <string name="textViewHeader">My Countries</string>
    <string name="title_activity_add_country">Add Country</string>
    <string name="textViewCountry">Name of country:</string>
    <string name="textViewYear">Year:</string>
    <string name="buttonCountryFinish">Finish</string>
    <string name="buttonCountryCancel">Cancel</string>

    <!-- Settings -->
    <string name="title_activity_setting">Settings</string>
    <string name="background_color_settings">Change background color</string>
    <string name="size_settings">Change text size</string>

    <!-- Settings headers -->
    <string name="pref_update_setting">Update</string>
    <string name="pref_background_color">Background color</string>
    <string name="pref_size">Text size</string>

    <!-- Settings background color -->
    <string name="colorWhite">White</string>
    <string name="colorYellow">Yellow</string>
    <string name="colorPink">Pink</string>
    <string name="colorBlue">Blue</string>
    <string name="colorGreen">Green</string>
    <color name="myColorWhite">#ffffffff</color>
    <color name="myColorYellow">#ffeeed83</color>
    <color name="myColorPink">#ffeeaee1</color>
    <color name="myColorBlue">#ff73c9ee</color>
    <color name="myColorGreen">#ff99ee87</color>
    
    <!-- Settings text size -->

    <!-- Alarm Clock -->
    <string name="title_activity_alarm_clock">Alarm Clock</string>
    <string name="buttonSetAlarm">Set Alarm</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="buttonAlarm">Stop</string>

    <!-- MP3 Player -->
    <string name="title_activity_mp3_player">MP3 Player</string>
    <string name="textViewHeaderSongs">Playlist</string>    
    <string name="buttonNext">Next</string>
    <string name="buttonPrev">Prev</string>
    <string name="buttonPausePlay">Play</string>
    <string name="title_activity_mp3_service">MP3 Player</string>

</resources>
