<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/title_activity_setting"/>
    
    <item 
        android:id="@+id/order_by_year"
        android:orderInCategory="110"
        android:showAsAction="always"
        android:title="@string/order_by_year" />
    
    <item 
        android:id="@+id/order_by_name"
        android:orderInCategory="111"
        android:showAsAction="always"
        android:title="@string/order_by_name" />
    
    <item
        android:id="@+id/add_new_country"
        android:orderInCategory="120"
        android:showAsAction="always"
        android:title="@string/add_new_country" />

</menu>
