<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MP3Player" >
    
    <Button
        android:id="@+id/buttonPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:padding="20dp"
        android:background="@color/myColorBlue"
        android:text="@string/buttonPrev" />
    
    <Button
        android:id="@+id/buttonPausePlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:padding="20dp"
        android:background="@color/myColorBlue"
        android:text="@string/buttonPausePlay" />
    
    <Button
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewHeaderSongs"
        android:layout_alignRight="@+id/list"
        android:onClick="onClick"
        android:padding="20dp"
        android:background="@color/myColorBlue"
        android:text="@string/buttonNext" />

    <TextView
        android:id="@+id/textViewHeaderSongs"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonPrev"
        android:layout_marginTop="31dp"
        android:text="@string/textViewHeaderSongs"
        android:textSize="20sp"
        android:textStyle="bold" />    
    
    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewHeaderSongs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" >
    </ListView>

</RelativeLayout>